# cpanel2shell-honeypot

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: test.yml
data/: certs.example.toml
src/: capture.rs  cli.rs  config.rs  events.rs  limits.rs  main.rs  router.rs
src/handlers/: auth.rs  dashboard.rs  fallback.rs  headers.rs  mod.rs  terminal.rs  upload.rs
src/sessions/: mod.rs
src/shell/: builtins.rs  exec.rs  expand.rs  init.rs  lexer.rs  mod.rs  parser.rs  tests.rs  vfs.rs  vfs_tests.rs
src/shell/commands/: core.rs  cpanel.rs  dev.rs  fs.rs  misc.rs  mod.rs  net.rs  package.rs  sysinfo.rs  system.rs
src/tls/: config.rs  generator.rs  mod.rs  resolver.rs  watcher.rs
